--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <!-- Tiwari balkrishna insta:- _bkt_0  -->
     <div class="container">
         <!-- 🎉 Initial Text -->
         <h1 class="birthday-heading" id="birthdayText">I heard it's your bday</h1>
@@ -68,7 +69,7 @@
                 </g>
             </svg>
 
-            <!-- 🔥 Matchstick -->
+            <!-- 🔥 Matchstick by Tiwari balkrishna insta:- _bkt_0 -->
             <svg class="matchstick hidden-element" viewBox="0 0 100 100">
                 <rect x="45" y="0" width="10" height="90" fill="#8B4513" rx="3" ry="3" />
                 <circle class="match-head" cx="50" cy="90" r="7" fill="#880808" />
